commit ReWork Design - PrivacyPolicy - DMCA - Footer fix

--- a/AnimePages.html
+++ b/AnimePages.html
@@ -42,70 +42,90 @@
 
 
     <!-- #Header-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
 
-            <a class="navbar-brand" href="index.html" style="color: white;">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/SeraYu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    SeraYu Fansub</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+      <a class="navbar-brand" href="index.html" style="color: white;">
+        <a class="navbar-brand" href="index.html">
+          <img src="img/SeraYu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+          SeraYu Fansub</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Genre
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Comedy</a>
-                                <a class="dropdown-item" href="#">Drama</a>
-                                <a class="dropdown-item" href="#">Fantasy</a>
-                                <a class="dropdown-item" href="#">Romance</a>
-                                <a class="dropdown-item" href="#">Slice of Life</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="g_page.php">See More...</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="l_update.php">Latest Update</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="movie.php">Movies</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="tv_series.php">Tv Series</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Random Shit
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Wangy maker</a>
-                                <a class="dropdown-item" href="#">Gallery</a>
-                                <!-- <div class="dropdown-divider"></div>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Genre
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Comedy</a>
+                <a class="dropdown-item" href="#">Drama</a>
+                <a class="dropdown-item" href="#">Fantasy</a>
+                <a class="dropdown-item" href="#">Romance</a>
+                <a class="dropdown-item" href="#">Slice of Life</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="g_page.php">See More...</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Type
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">TV Series</a>
+                <a class="dropdown-item" href="#">Movie</a>
+                <a class="dropdown-item" href="#">OVA / ONA / Special</a>
+              </div>  
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="l_update.php">Latest Update</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="l_update.php">Gallery</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Services
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Donasi</a>
+                <a class="dropdown-item" href="#">Feedback</a>
+                <a class="dropdown-item" href="#">Jasa Render</a>
+                <a class="dropdown-item" href="#">Jasa Gambar</a>
+                <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
-                            </div>
-                        </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Random Shit
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Wangy maker</a>
+                <!-- <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="g_page.php">See More...</a> -->
+              </div>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+          </form>
         </div>
-    </nav>
-
-    <!-- #endHeader -->
+    </div>
+  </nav>
+  <!-- #endHeader -->
 
     <!-- #Content-->
 
@@ -513,26 +533,27 @@
     <!-- #endContent -->
 
     <!-- Footer -->
-    <div class="footer-basic navbar-dark bg-dark mt-4">
-        <footer>
-            <div class="social">
-                <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
-                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
-                <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
-            </div>
+  <div class="footer-basic navbar-dark bg-dark mt-4 ">
+    <footer>
+      <div class="social">
+        <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+        <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+        <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
+      </div>
 
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="index.html">Home</a></li>
-                <li class="list-inline-item"><a href="#">DMCA</a></li>
-                <li class="list-inline-item"><a href="#">About Us</a></li>
-                <li class="list-inline-item"><a href="#">Feedback</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-            </ul>
-            <p class="copyright">Serayu Fansub © 2021</p>
-        </footer>
-    </div>
-    <!-- Footer -->
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="index.html">Home</a></li>
+        <li class="list-inline-item"><a href="dmca.html">DMCA</a></li>
+        <li class="list-inline-item"><a href="#">About Us</a></li>
+        <li class="list-inline-item"><a href="#">Feedback</a></li>
+        <li class="list-inline-item"><a href="privacyPolicy.html">Privacy Policy</a></li>
+      </ul>
+      <p class="copyright">Serayu Fansub © 2021</p>
+    </footer>
+  </div>
+  <!-- Footer -->
 </body>
+
 
 </html>
