--- a/index.html
+++ b/index.html
@@ -84,11 +84,28 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">TV Series</a>
                 <a class="dropdown-item" href="#">Movie</a>
-                <a class="dropdown-item" href="#">Ova / Ona / Special</a>
+                <a class="dropdown-item" href="#">OVA / ONA / Special</a>
               </div>  
             </li>
             <li class="nav-item">
               <a class="nav-link" href="l_update.php">Latest Update</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="l_update.php">Gallery</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Services
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Donasi</a>
+                <a class="dropdown-item" href="#">Feedback</a>
+                <a class="dropdown-item" href="#">Jasa Render</a>
+                <a class="dropdown-item" href="#">Jasa Gambar</a>
+                <!-- <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="g_page.php">See More...</a> -->
+              </div>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -97,7 +114,6 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Wangy maker</a>
-                <a class="dropdown-item" href="#">Gallery</a>
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
               </div>
@@ -189,14 +205,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html#download"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
@@ -205,14 +221,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
@@ -221,14 +237,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
@@ -237,14 +253,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
@@ -253,14 +269,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
@@ -269,14 +285,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
@@ -285,14 +301,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
@@ -301,17 +317,19 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col">
                 <div class="card catalogCard">
                   <a class="btn btn-success" href="movie.php"> Movie </a>
-                  <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100"
+                  <a href="animePages.html" class="myshow"><img class="card-img-top h-100"
                       src="img/Anime/Kimi_no_nawa.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="animePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
+
+              
 
 
 
@@ -388,10 +406,10 @@
 
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Home</a></li>
-        <li class="list-inline-item"><a href="#">DMCA</a></li>
+        <li class="list-inline-item"><a href="dmca.html">DMCA</a></li>
         <li class="list-inline-item"><a href="#">About Us</a></li>
         <li class="list-inline-item"><a href="#">Feedback</a></li>
-        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+        <li class="list-inline-item"><a href="privacyPolicy.html">Privacy Policy</a></li>
       </ul>
       <p class="copyright">Serayu Fansub © 2021</p>
     </footer>
