commit ReWork Design - feedback - fix sidebar

--- a/AnimePages.html
+++ b/AnimePages.html
@@ -493,7 +493,7 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="col-12  mb-1">
-                            <div class="social bg-dark">
+                            <div class="social bg-dark mx-auto">
                                 <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
                                 <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
                                 <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
@@ -523,6 +523,7 @@
 
                     </div>
                 </div>
+
             </div>
             <!-- #endSidebar -->
 
