--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
               <div class="col-12">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination justify-content-center">
-                    <li class="page-item"><a class="page-link" onclick="BlockedTest()">Previous</a></li>
+                    <li class="page-item"><a class="page-link">Previous</a></li>
                     <li class="page-item"><a class="page-link" href="">1</a></li>
                     <li class="page-item"><a class="page-link" onclick="BlockedTest()">2</a></li>
                     <li class="page-item"><a class="page-link" onclick="BlockedTest()">Next</a></li>
@@ -359,7 +359,7 @@
             </a>
           </div>
           <!-- #Iklan Box -->
-          
+
         </div>
       </div>
 
@@ -368,7 +368,7 @@
         <div class="col-12">
           <div class="row">
             <div class="col-12  mb-1">
-              <div class="social bg-dark">
+              <div class="social bg-dark mx-auto">
                 <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
                 <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
                 <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
@@ -398,9 +398,8 @@
         </div>
 
       </div>
-
-
       <!-- #endSidebar -->
+
     </div>
 
   </div>
