--- a/pagesTemplate.html
+++ b/pagesTemplate.html
@@ -85,7 +85,7 @@
                 <a class="dropdown-item" href="#">TV Series</a>
                 <a class="dropdown-item" href="#">Movie</a>
                 <a class="dropdown-item" href="#">OVA / ONA / Special</a>
-              </div>  
+              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="l_update.php">Latest Update</a>
@@ -145,7 +145,7 @@
         <div class="col-12">
           <div class="row">
             <div class="col-12  mb-1">
-              <div class="social bg-dark">
+              <div class="social bg-dark mx-auto">
                 <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
                 <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
                 <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
@@ -173,6 +173,7 @@
 
           </div>
         </div>
+
       </div>
       <!-- #endSidebar -->
     </div>
