commit ReWork Design - feedback

--- a/feedback.html
+++ b/feedback.html
@@ -143,23 +143,92 @@
                             <div class="col-12 bg-light rounded-corner border  ">
 
                                 <div class="col-12 px-0 py-1 text-justify">
-                                    <a data-toggle="collapse" href="#collapseMainDesc" role="button"
-                                        aria-expanded="false" aria-controls="collapseMainDesc">
+                                    <a data-toggle="collapse" href="#collapseMainFeed" role="button"
+                                        aria-expanded="false" aria-controls="collapseMainFeed">
                                         <div class="bg-primary text-white text-center rounded-corner border score mb-1">
                                             Feedback
                                         </div>
                                     </a>
 
 
-                                    <div class="collapse show " id="collapseMainDesc">
+                                    <div class="collapse show " id="collapseMainFeed">
                                         <h2>Feedback</h2>
                                         <h4>Kritik, saran, Feedback, dan bug</h4>
                                         <p>Jika kalian ingin memberi feedback dan masukan atau ingin melaporkan bug yg
-                                            kalian temukan di website kami. Silahkan hubungi kami melalui social media
+                                            kalian temukan di website kami. Silahkan hubungi kami melalui <a
+                                                href="https://discord.com/invite/ycTY2gk9k3"><b>Server Discord Serayu
+                                                    Fansub</b></a>
                                             kami yang bisa kalian lihat di bawah</p>
+                                        <div class="col-12  mb-1">
+                                            <div class="social bg-dark mx-auto">
+                                                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"
+                                                        style="font-size: 60px;"></i></a>
+                                            </div>
+                                        </div>
+                                        <p>Atau</p>
+                                        <ul>
+                                            <li>
+                                                <p>Discord : <a
+                                                        href="https://discord.com/invite/ycTY2gk9k3">https://discord.com/invite/ycTY2gk9k3</a>
+                                                </p>
+                                            </li>
+                                        </ul>
+                                        <p>Kami menyarankan kalian menghubungi kami melalui <a
+                                                href="https://discord.com/invite/ycTY2gk9k3"><b>Server Discord Serayu
+                                                    Fansub</b></a> untuk
+                                            respon yang lebih cepat, behubungan dengan komunitas kami dan juga
+                                            kelebihan-kelebihan lainnya</p>
+                                        <p>Seperti update anime lebih cepat, request fitur web, request anime dengan
+                                            voting, vip access, dan teman mabar (ಠ_ಠ)</p>
 
 
                                     </div>
+
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- #EndDescription Box-->
+
+                    <!-- #Description Box-->
+                    <div class="col-12">
+                        <div class="bg-white rounded-corner px-3 py-3 mb-4">
+                            <div class="col-12 bg-light rounded-corner border  ">
+
+                                <div class="col-12 px-0 py-1 text-justify">
+                                    <a data-toggle="collapse" href="#collapseMainDonate" role="button"
+                                        aria-expanded="false" aria-controls="collapseMainDonate">
+                                        <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                                            Donasi
+                                        </div>
+                                    </a>
+
+
+                                    <div class="collapse show " id="collapseMainDonate">
+                                        <h2>Donasi</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
+                                            ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
+                                            Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
+                                            sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
+                                            turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
+                                            eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
+                                            ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
+                                            Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
+                                            sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
+                                            turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
+                                            eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
+                                            ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
+                                            Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
+                                            sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
+                                            turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
+                                            eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
+                                    </div>
+
+
 
                                 </div>
                             </div>
