--- a/feedback.html
+++ b/feedback.html
@@ -296,7 +296,7 @@
                 <li class="list-inline-item"><a href="index.html">Home</a></li>
                 <li class="list-inline-item"><a href="dmca.html">DMCA</a></li>
                 <li class="list-inline-item"><a href="#">About Us</a></li>
-                <li class="list-inline-item"><a href="#">Feedback</a></li>
+                <li class="list-inline-item"><a href="feedback.html">Feedback</a></li>
                 <li class="list-inline-item"><a href="privacyPolicy.html">Privacy Policy</a></li>
             </ul>
             <p class="copyright">Serayu Fansub © 2021</p>
