--- a/index.html
+++ b/index.html
@@ -414,12 +414,12 @@
         <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
         <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
       </div>
-
+  
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Home</a></li>
         <li class="list-inline-item"><a href="dmca.html">DMCA</a></li>
         <li class="list-inline-item"><a href="#">About Us</a></li>
-        <li class="list-inline-item"><a href="#">Feedback</a></li>
+        <li class="list-inline-item"><a href="feedback.html">Feedback</a></li>
         <li class="list-inline-item"><a href="privacyPolicy.html">Privacy Policy</a></li>
       </ul>
       <p class="copyright">Serayu Fansub © 2021</p>
