--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Home</a></li>
         <li class="list-inline-item"><a href="dmca.html">DMCA</a></li>
-        <li class="list-inline-item"><a href="#">About Us</a></li>
+        <li class="list-inline-item"><a href="aboutUs.html">About Us</a></li>
         <li class="list-inline-item"><a href="feedback.html">Feedback</a></li>
         <li class="list-inline-item"><a href="privacyPolicy.html">Privacy Policy</a></li>
       </ul>
