commit ReWork Design - genre list

--- a/dmca.html
+++ b/dmca.html
@@ -149,23 +149,23 @@
                       DMCA
                     </div>
                   </a>
-
+                  <hr>
 
                   <div class="collapse show " id="collapseMainDesc">
 
                     <h1>DMCA</h1>
-                    <header >
+                    <header>
                       <p>Release on March 6th, 2021</p>
                     </header>
-                    <div >
+                    <div>
                       <p>If you have reason to believe that
-                          one of our content is violating your copyrights or some of Search Results references to
-                          illegal contents, please send a email for us.<br>
-                          Please allow up to a 1-7 business days
-                          for an email response. Note that emailing your complaint to other parties such as our
-                          Internet Service Provider, Hosting Provider, and other third party will not expedite your
-                          request and may result in a delayed response due to the complaint not being filed
-                          properly.
+                        one of our content is violating your copyrights or some of Search Results references to
+                        illegal contents, please send a email for us.<br>
+                        Please allow up to a 1-7 business days
+                        for an email response. Note that emailing your complaint to other parties such as our
+                        Internet Service Provider, Hosting Provider, and other third party will not expedite your
+                        request and may result in a delayed response due to the complaint not being filed
+                        properly.
                       </p>
                       <h2>Required information :</h2>
                       <h3>Please note that we deal only with
@@ -195,7 +195,8 @@
 
                       <h2>DISCLAIMER:</h2>
                       <p>None of the files listed in this
-                        website are hosted on the server of Https://http://serayufs.my.id/ all point to content hosted on
+                        website are hosted on the server of Https://http://serayufs.my.id/ all point to content hosted
+                        on
                         third party websites. Https://http://serayufs.my.id/ does not accept responsibility for content
                         hosted on third party websites and does not have any involvement in the
                         downloading/uploading of movies . we just post links available in internet. If you think any
