--- a/animeList.html
+++ b/animeList.html
@@ -137,6 +137,88 @@
       <div class="col-12 col-lg-9 mb-4">
         <div class="row">
 
+          <!-- #Description Box-->
+          <div class="col-12">
+            <div class="bg-white rounded-corner px-3 py-3 mb-4">
+              <div class="col-12 bg-light rounded-corner border  ">
+                <div class="col-12 px-0 py-1 text-justify">
+                  <a data-toggle="collapse" href="#collapseMainGenre" role="button" aria-expanded="false"
+                    aria-controls="collapseMainDesc">
+                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                      Genre
+                    </div>
+                  </a>
+
+
+                  <div class="collapse show " id="collapseMainGenre">
+                    <hr>
+                    <div class="col-12">
+                      <div class="row">
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Action</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Adventure</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Comedy</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Drama</a></div>
+                      </div>
+                      <div class="row">
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Ecchi</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Fantasy</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Harem</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Horror</a></div>
+                      </div>
+                      <div class="row">
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Mecha</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Music</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Parody</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Romance</a></div>
+                      </div>
+                      <div class="row">
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>School</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Sci-fi</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Seinen</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Shoujo</a></div>
+                      </div>
+                      <div class="row">
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Shounen</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Slice of Life</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Sport</a></div>
+                        <div class="col-6 col-md-3 my-2"><a href=""><i class="bi bi-caret-right"></i>Supernatural</a></div>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- #EndDescription Box-->
+
+          <!-- #Description Box-->
+          <div class="col-12">
+            <div class="bg-white rounded-corner px-3 py-3 mb-4">
+              <div class="col-12 bg-light rounded-corner border  ">
+
+                <div class="col-12 px-0 py-1 text-justify">
+                  <a data-toggle="collapse" href="#collapseMainList" role="button" aria-expanded="false"
+                    aria-controls="collapseMainDesc">
+                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                      Anime List
+                    </div>
+                  </a>
+
+
+                  <div class="collapse show " id="collapseMainList">
+                    <div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- #EndDescription Box-->
         </div>
       </div>
 
